# disorganized-api

./: Cargo.toml  README.md  test_model.rs
migrations/2023-05-25-075019_create_view_tokens/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/controllers/: mod.rs  my_controller.rs
