[package]
name = "disorganized-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = "0.4.24"
diesel = { version = "2.0.4", features = ["postgres"] }
diesel-async = { version = "0.2.2", features = ["postgres"] }
dotenvy = "0.15.7"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
